docs: att api docs
