# app/Http/Controllers/AuthController.php
@@ -7,6 +7,7 @@ use App\Http\Requests\RegisterRequest;
 use App\interfaces\Services\IAuthService;
 use Illuminate\Http\JsonResponse;
 use Symfony\Component\HttpFoundation\Response as StatusCode;
+use OpenApi\Attributes as OA;
 
 class AuthController extends Controller
 {
@@ -17,22 +18,24 @@ class AuthController extends Controller
         $this->authService = $authService;
     }
 
-    /**
-     * @OA\Post(
-     *     path="/api/auth/login",
-     *     @OA\Response(response="200", description="Successful operation"),
-     *     @OA\Response(response="401", description="Unauthorized"),
-     *     @OA\RequestBody(
-     *         description="User login credentials",
-     *         required=true,
-     *         @OA\JsonContent(
-     *             required={"email","password"},
-     *             @OA\Property(property="email", type="string", format="email", description="The email of the user"),
-     *             @OA\Property(property="password", type="string", format="password", description="The password of the user")
-     *         )
-     *     )
-     * )
-     */
+    #[OA\Post(
+        path: "/api/auth/login",
+        summary: "Login user",
+        requestBody: new OA\RequestBody(required: true,
+            content: new OA\MediaType(mediaType: "application/json",
+                schema: new OA\Schema(required: ["email, password"],
+                    properties: [
+                        new OA\Property(property: 'email', description: "email of user", type: "string", format: "email"),
+                        new OA\Property(property: 'password', description: "password of user", type: "string", format: "password")]
+                ))),
+        tags: ["Authentication"],
+        responses: [
+            new OA\Response(response: StatusCode::HTTP_OK, description: "Successful operation"),
+            new OA\Response(response: StatusCode::HTTP_BAD_REQUEST, description: "Bad Request"),
+            new OA\Response(response: StatusCode::HTTP_UNAUTHORIZED, description: "Unauthorized"),
+            new OA\Response(response: StatusCode::HTTP_INTERNAL_SERVER_ERROR, description: "Server Error")
+        ]
+    )]
     public function login(AuthRequest $request): JsonResponse
     {
         $credentials = $request->validated();
@@ -45,13 +48,17 @@ class AuthController extends Controller
         ], StatusCode::HTTP_OK);
     }
 
-    /**
-     * @OA\Post(
-     *     path="/api/auth/logout",
-     *     @OA\Response(response="200", description="Successful operation"),
-     *     @OA\Response(response="401", description="Unauthorized"),
-     * )
-     */
+    #[OA\Post(
+        path: "/api/auth/logout",
+        summary: "Logout user",
+        tags: ["Authenticated"],
+        responses: [
+            new OA\Response(response: StatusCode::HTTP_OK, description: "Successful operation"),
+            new OA\Response(response: StatusCode::HTTP_BAD_REQUEST, description: "Bad Request"),
+            new OA\Response(response: StatusCode::HTTP_UNAUTHORIZED, description: "Unauthorized"),
+            new OA\Response(response: StatusCode::HTTP_INTERNAL_SERVER_ERROR, description: "Server Error")
+        ]
+    )]
     public function logout(): JsonResponse
     {
         $this->authService->logout();
@@ -61,23 +68,25 @@ class AuthController extends Controller
         ], StatusCode::HTTP_OK);
     }
 
-    /**
-     * @OA\Post(
-     *     path="/api/auth/register",
-     *     @OA\Response(response="200", description="Successful operation"),
-     *     @OA\Response(response="401", description="Unauthorized"),
-     *     @OA\RequestBody(
-     *         description="User registration data",
-     *         required=true,
-     *         @OA\JsonContent(
-     *             required={"name","email","password"},
-     *             @OA\Property(property="name", type="string", format="text", description="The name of the user"),
-     *             @OA\Property(property="email", type="string", format="email", description="The email of the user"),
-     *             @OA\Property(property="password", type="string", format="password", description="The password of the user")
-     *         )
-     *     )
-     * )
-     */
+    #[OA\Post(
+        path: "/api/auth/register",
+        summary: "Logout user",
+        requestBody: new OA\RequestBody(required: true,
+            content: new OA\MediaType(mediaType: "application/json",
+                schema: new OA\Schema(required: ["name", "email", "password", "password_confirmation"],
+                    properties: [
+                        new OA\Property(property: 'name', description: "User name", type: "string"),
+                        new OA\Property(property: 'email', description: "email of user", type: "string", format: "email"),
+                        new OA\Property(property: 'password', description: "password of user", type: "string", format: "password"),
+                        new OA\Property(property: 'password_confirmation', description: "password confirmation", type: "string", format: "password")]
+                ))),
+        tags: ["Registration"],
+        responses: [
+            new OA\Response(response: StatusCode::HTTP_CREATED, description: "Successful operation"),
+            new OA\Response(response: StatusCode::HTTP_BAD_REQUEST, description: "Bad Request"),
+            new OA\Response(response: StatusCode::HTTP_INTERNAL_SERVER_ERROR, description: "Server Error")
+        ]
+    )]
     public function register(RegisterRequest $request): JsonResponse
     {
         $data = $request->validated();
@@ -90,13 +99,17 @@ class AuthController extends Controller
         ], StatusCode::HTTP_CREATED);
     }
 
-    /**
-     * @OA\Get(
-     *     path="/api/auth/user",
-     *     @OA\Response(response="200", description="Successful operation"),
-     *     @OA\Response(response="401", description="Unauthorized"),
-     * )
-     */
+    #[OA\Get(
+        path: "/api/auth/user",
+        summary: "Get authenticated user",
+        tags: ["Authenticated"],
+        responses: [
+            new OA\Response(response: StatusCode::HTTP_OK, description: "Successful operation"),
+            new OA\Response(response: StatusCode::HTTP_BAD_REQUEST, description: "Bad Request"),
+            new OA\Response(response: StatusCode::HTTP_UNAUTHORIZED, description: "Unauthorized"),
+            new OA\Response(response: StatusCode::HTTP_INTERNAL_SERVER_ERROR, description: "Server Error")
+        ]
+    )]
     public function getUserAuthenticated(): JsonResponse
     {
         $userResource = $this->authService->user();
