# app/Http/Controllers/GuildController.php
@@ -8,7 +8,7 @@ use App\Models\Guild;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
 use Symfony\Component\HttpFoundation\Response as StatusCode;
-use Throwable;
+use OpenApi\Attributes as OA;
 
 class GuildController extends Controller
 {
@@ -19,6 +19,16 @@ class GuildController extends Controller
         $this->guildService = $guildService;
     }
 
+    #[OA\Get(
+        path: "/api/allGuilds",
+        summary: "Get all guilds",
+        tags: ["Admin"],
+        responses: [
+            new OA\Response(response: StatusCode::HTTP_OK, description: "Successful operation"),
+            new OA\Response(response: StatusCode::HTTP_UNAUTHORIZED, description: "Unauthorized"),
+            new OA\Response(response: StatusCode::HTTP_INTERNAL_SERVER_ERROR, description: "Server Error")
+        ]
+    )]
     public function getAllGuilds(): JsonResponse
     {
         $guildsResource = $this->guildService->getAllGuilds();
@@ -26,6 +36,17 @@ class GuildController extends Controller
         return response()->json(['guilds' => $guildsResource], StatusCode::HTTP_OK);
     }
 
+    #[OA\Get(
+        path: "/api/guilds",
+        summary: "Get all guilds of authenticated user",
+        tags: ["Authenticated"],
+        responses: [
+            new OA\Response(response: StatusCode::HTTP_OK, description: "Successful operation"),
+            new OA\Response(response: StatusCode::HTTP_BAD_REQUEST, description: "Bad Request"),
+            new OA\Response(response: StatusCode::HTTP_UNAUTHORIZED, description: "Unauthorized"),
+            new OA\Response(response: StatusCode::HTTP_INTERNAL_SERVER_ERROR, description: "Server Error")
+        ]
+    )]
     public function index(): JsonResponse
     {
         $guildsResource = $this->guildService->index();
@@ -33,12 +54,43 @@ class GuildController extends Controller
         return response()->json(['guilds' => $guildsResource], StatusCode::HTTP_OK);
     }
 
+    #[OA\Get(
+        path: "/api/guilds/{guild}",
+        summary: "Get a detailed guild",
+        tags: ["Authenticated"],
+        responses: [
+            new OA\Response(response: StatusCode::HTTP_OK, description: "Successful operation"),
+            new OA\Response(response: StatusCode::HTTP_BAD_REQUEST, description: "Bad Request"),
+            new OA\Response(response: StatusCode::HTTP_UNAUTHORIZED, description: "Unauthorized"),
+            new OA\Response(response: StatusCode::HTTP_INTERNAL_SERVER_ERROR, description: "Server Error")
+        ]
+    )]
     public function show(Guild $guild): JsonResponse
     {
         $guildResource = $this->guildService->show($guild);
         return response()->json(['guild' => $guildResource], StatusCode::HTTP_OK);
     }
 
+    #[OA\Put(
+        path: "/api/guilds/{guild}",
+        summary: "Update a guild",
+        requestBody: new OA\RequestBody(required: true,
+            content: new OA\MediaType(mediaType: "application/json",
+                schema: new OA\Schema(required: [],
+                    properties: [
+                        new OA\Property(property: 'name', description: "Guild name", type: "string"),
+                        new OA\Property(property: 'description', description: "Guild description", type: "string"),
+                        new OA\Property(property: 'icon_url', description: "Guild Icon Url", type: "string")]
+                ))),
+        tags: ["Authenticated"],
+        responses: [
+            new OA\Response(response: StatusCode::HTTP_OK, description: "Successful operation"),
+            new OA\Response(response: StatusCode::HTTP_BAD_REQUEST, description: "Bad Request"),
+            new OA\Response(response: StatusCode::HTTP_UNAUTHORIZED, description: "Unauthorized"),
+            new OA\Response(response: StatusCode::HTTP_FORBIDDEN, description: "Forbidden"),
+            new OA\Response(response: StatusCode::HTTP_INTERNAL_SERVER_ERROR, description: "Server Error")
+        ]
+    )]
     public function update(Guild $guild, StoreGuildRequest $request): JsonResponse
     {
         $data = $request->validated();
@@ -51,6 +103,25 @@ class GuildController extends Controller
         ], StatusCode::HTTP_OK);
     }
 
+    #[OA\Post(
+        path: "/api/guilds",
+        summary: "Create a guild",
+        requestBody: new OA\RequestBody(required: true,
+            content: new OA\MediaType(mediaType: "application/json",
+                schema: new OA\Schema(required: ["name", "description", "icon_url"],
+                    properties: [
+                        new OA\Property(property: 'name', description: "Guild name", type: "string"),
+                        new OA\Property(property: 'description', description: "Guild description", type: "string"),
+                        new OA\Property(property: 'icon_url', description: "Guild Icon Url", type: "string")]
+                ))),
+        tags: ["Authenticated"],
+        responses: [
+            new OA\Response(response: StatusCode::HTTP_CREATED, description: "Successful operation"),
+            new OA\Response(response: StatusCode::HTTP_BAD_REQUEST, description: "Bad Request"),
+            new OA\Response(response: StatusCode::HTTP_UNAUTHORIZED, description: "Unauthorized"),
+            new OA\Response(response: StatusCode::HTTP_INTERNAL_SERVER_ERROR, description: "Server Error")
+        ]
+    )]
     public function store(StoreGuildRequest $request): JsonResponse
     {
         $data = $request->validated();
@@ -63,9 +134,18 @@ class GuildController extends Controller
         ], StatusCode::HTTP_CREATED);
     }
 
-    /**
-     * @throws Throwable
-     */
+    #[OA\Delete(
+        path: "/api/guilds/{guild}",
+        summary: "Delete a guild",
+        tags: ["Authenticated"],
+        responses: [
+            new OA\Response(response: StatusCode::HTTP_OK, description: "Successful operation"),
+            new OA\Response(response: StatusCode::HTTP_BAD_REQUEST, description: "Bad Request"),
+            new OA\Response(response: StatusCode::HTTP_UNAUTHORIZED, description: "Unauthorized"),
+            new OA\Response(response: StatusCode::HTTP_FORBIDDEN, description: "Forbidden"),
+            new OA\Response(response: StatusCode::HTTP_INTERNAL_SERVER_ERROR, description: "Server Error")
+        ]
+    )]
     public function destroy(Guild $guild): JsonResponse
     {
         $this->guildService->delete($guild);
@@ -75,6 +155,17 @@ class GuildController extends Controller
         ], StatusCode::HTTP_OK);
     }
 
+    #[OA\Get(
+        path: "/api/guilds/inviteCode/{guild}",
+        summary: "Get invite code of a guild",
+        tags: ["Authenticated"],
+        responses: [
+            new OA\Response(response: StatusCode::HTTP_OK, description: "Successful operation"),
+            new OA\Response(response: StatusCode::HTTP_BAD_REQUEST, description: "Bad Request"),
+            new OA\Response(response: StatusCode::HTTP_UNAUTHORIZED, description: "Unauthorized"),
+            new OA\Response(response: StatusCode::HTTP_INTERNAL_SERVER_ERROR, description: "Server Error")
+        ]
+    )]
     public function getInviteCode(Guild $guild): JsonResponse
     {
         $inviteCode = $this->guildService->getInviteCode($guild);
@@ -82,6 +173,23 @@ class GuildController extends Controller
         return response()->json(['invite_code' => $inviteCode], StatusCode::HTTP_OK);
     }
 
+    #[OA\Post(
+        path: "/api/guilds/entry",
+        summary: "Enter into a guild by invite code",
+        requestBody: new OA\RequestBody(required: true,
+            content: new OA\MediaType(mediaType: "application/json",
+                schema: new OA\Schema(required: ["invite_code"],
+                    properties: [
+                        new OA\Property(property: 'invite_code', description: "Invite code", type: "string")]
+                ))),
+        tags: ["Authenticated"],
+        responses: [
+            new OA\Response(response: StatusCode::HTTP_OK, description: "Successful operation"),
+            new OA\Response(response: StatusCode::HTTP_BAD_REQUEST, description: "Bad Request"),
+            new OA\Response(response: StatusCode::HTTP_UNAUTHORIZED, description: "Unauthorized"),
+            new OA\Response(response: StatusCode::HTTP_INTERNAL_SERVER_ERROR, description: "Server Error")
+        ]
+    )]
     public function entryByInviteCode(Request $request): JsonResponse
     {
         $request->validate(['invite_code' => 'required|string']);
